# vitreaclient

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: example1.py
src/: __init__.py
src/vitrea_client/: api.py  client.py  constants.py
src/vitreaclient/: __init__.py  api.py  client.py  constants.py
src/vitreaclient.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_connect.py  test_import.py  test_keepalive_resilience.py  test_keepalive_simple.py  test_listeners_after_reconnection.py  test_race_conditions.py  test_reconnection.py  test_should_maintain_connection.py
vitrea/: __init__.py  api.py  client.py  constants.py
vitrea_client/: __init__.py  api.py  client.py
