[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vitreaclient"
version = "0.1.1"
description = "Python package encapsulating Vitrea box communication protocol."
authors = [
    { name = "SK", email = "skappdevel@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["home automation", "vitrea"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/solangek/vitreaclient"

[tool.setuptools.packages.find]
where = ["src"]
